# execution-gate

./: CHANGELOG.md  CONTRIBUTING.md  README.md  policy.yaml  pyproject.toml
.github/workflows/: conformance.yml
conformance/: README.md  requirements.txt
conformance/fixtures/decisions/: allow_decision.json  deny_decision.json  deny_missing_proof.json  deny_wrong_proof.json
conformance/tests/: conftest.py  test_decision_completeness.py  test_execution_gate.py  test_fail_closed.py  test_proof_hash_integrity.py
examples/: local_agent_demo.py  quiet_adoption_demo.py  simple_agent.py
firewall/: core.py  logger.py  policy.py
gate/: __init__.py  cli.py  context_integrity.py  core.py  decision.py  enforcement.py  impact_resolver.py  instruction_normalizer.py  logger.py  policy.py  telemetry.py
gate/instrumentation/: otel.py
spec/: action-envelope.schema.json  decision.schema.json
tests/: test_core.py
